build: make dockerfile non-root & UseZGC